--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "C:\\Users\\rkuy\\OneDrive - FIVES\\Bureau\\Microservices_GO\\FizzBuzz\\service\\service_test.go"//"${fileDirname}"
+            "program": "C:\\Users\\rkuy\\OneDrive - FIVES\\Bureau\\Microservices_GO\\FizzBuzz\\main.go"//"${fileDirname}"
+            //C:\\Users\\rkuy\\OneDrive - FIVES\\Bureau\\Microservices_GO\\FizzBuzz\\main.go
+            //C:\\Users\\rkuy\\OneDrive - FIVES\\Bureau\\Microservices_GO\\FizzBuzz\\service\\service_test.go
         }
     ]
 }
